:recycle: Use 409 for errors in DELETE
